--- a/src/styles/components/actor-sheets/_aside-base.scss
+++ b/src/styles/components/actor-sheets/_aside-base.scss
@@ -33,7 +33,7 @@ form {
     .sidebar {
       margin: 0 23px 0 30px;
       height: 650px;
-      overflow: hidden scroll;
+      overflow: hidden;
       scrollbar-width: thin;
       scrollbar-color: var(--demonlord-red) transparent;
 
